--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 46,
    "id": "faf7f937",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 47,
    "id": "6aef67f1",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 48,
    "id": "86d7ede9",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
        "True"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 49,
    "id": "e0795b0f",
    "metadata": {},
    "outputs": [],
@@ -78,17 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 50,
    "id": "0cdc3cf3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Naming a NASA Mars Rover Can Change Your Life'"
+       "'NASA Mars Mission Connects With Bosnian and Herzegovinian Town'"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,17 +100,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 51,
    "id": "e8ca5f1c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Want to name the robotic scientist NASA is sending to Mars in 2020? The student who named Curiosity — the rover currently exploring Mars — will tell you this is an opportunity worth taking.'"
+       "'A letter from NASA was presented to the mayor of Jezero, Bosnia-Herzegovina, honoring the connection between the town and Jezero Crater, the Mars 2020 rover landing site.'"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 52,
    "id": "f3ab8080",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 53,
    "id": "e1a06ccf",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 54,
    "id": "071bd99e",
    "metadata": {},
    "outputs": [],
@@ -168,17 +168,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 55,
    "id": "8cc05a23",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars2.jpg'"
+       "'image/featured/mars3.jpg'"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,17 +191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 56,
    "id": "ddf822b2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 57,
    "id": "1cafbd5c",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 58,
    "id": "38f1324b",
    "metadata": {},
    "outputs": [
@@ -319,7 +319,7 @@
        "Temperature:                -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 59,
    "id": "2a34ceae",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 60,
    "id": "499c6485",
    "metadata": {},
    "outputs": [],
@@ -372,8 +372,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "id": "a57f5233",
+   "execution_count": 61,
+   "id": "caf457f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,8 +382,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "id": "fa7340b9",
+   "execution_count": 62,
+   "id": "ae7a8b82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,54 +395,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "id": "51df115b",
+   "execution_count": 66,
+   "id": "1af5280f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'descendants'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [144]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m html \u001b[38;5;241m=\u001b[39m browser\u001b[38;5;241m.\u001b[39mhtml\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mlist\u001b[39m \u001b[38;5;241m=\u001b[39m soup(html, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhtml.parser\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 10\u001b[0m items \u001b[38;5;241m=\u001b[39m \u001b[43msoup\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfind_all\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdiv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mclass_\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mitem\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m items:\n\u001b[1;32m     13\u001b[0m     title \u001b[38;5;241m=\u001b[39m item\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mh3\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mtext\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/bs4/element.py:1865\u001b[0m, in \u001b[0;36mTag.find_all\u001b[0;34m(self, name, attrs, recursive, text, limit, **kwargs)\u001b[0m\n\u001b[1;32m   1847\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfind_all\u001b[39m(\u001b[38;5;28mself\u001b[39m, name\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, attrs\u001b[38;5;241m=\u001b[39m{}, recursive\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, text\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m   1848\u001b[0m              limit\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m   1849\u001b[0m     \u001b[38;5;124;03m\"\"\"Look in the children of this PageElement and find all\u001b[39;00m\n\u001b[1;32m   1850\u001b[0m \u001b[38;5;124;03m    PageElements that match the given criteria.\u001b[39;00m\n\u001b[1;32m   1851\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1863\u001b[0m \u001b[38;5;124;03m    :rtype: bs4.element.ResultSet\u001b[39;00m\n\u001b[1;32m   1864\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 1865\u001b[0m     generator \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdescendants\u001b[49m\n\u001b[1;32m   1866\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m recursive:\n\u001b[1;32m   1867\u001b[0m         generator \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchildren\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'descendants'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "====== WebDriver manager ======\n",
+      "Current google-chrome version is 95.0.4638\n",
+      "Get LATEST chromedriver version for 95.0.4638 google-chrome\n",
+      "Driver [/Users/cswartz/.wdm/drivers/chromedriver/mac64/95.0.4638.69/chromedriver] found in cache\n"
      ]
     }
    ],
    "source": [
+    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "browser = Browser('chrome', **executable_path, headless=False)\n",
+    "    \n",
     "# 2. Create a list to hold the images and titles.\n",
     "\n",
+    "url = 'http://marshemispheres.com/'\n",
+    "browser.visit(url)  \n",
+    "browser.is_element_present_by_css('div.list_text', wait_time=1)\n",
+    "hemisphere_image_urls = []\n",
+    "    \n",
     "hemisphere_image_urls = []\n",
     "\n",
     "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
     "\n",
     "html = browser.html\n",
-    "list = soup(html, 'html.parser')\n",
+    "hemi_soup = soup(html, 'html.parser')\n",
     "\n",
-    "items = soup.find_all('div', class_='item')\n",
+    "items = hemi_soup.find_all('div', class_='item')\n",
     "\n",
-    "for item in items:\n",
-    "    title = item.find('h3').text\n",
-    "    \n",
-    "    image = item.find('img')\n",
-    "    image_url = item.find['src']\n",
-    "\n",
-    "    \n",
-    "    hemisphere_image_urls.append({\"title\": title,\n",
-    "                                \"img url\": image_url})                       \n",
-    "    \n",
-    "hemisphere_image_urls    "
+    "for result in range(4):\n",
+    "    hemispheres = {}\n",
+    "    browser.find_by_css('a.product-item h3')[result].click()\n",
+    "    element = browser.find_link_by_text(\"Sample\").first\n",
+    "    hemispheres[\"img_url\"] = element[\"href\"]\n",
+    "    hemispheres[\"title\"] = browser.find_by_css(\"h2.title\").text\n",
+    "    hemisphere_image_urls.append(hemispheres)\n",
+    "    browser.back()\n",
+    "             "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5b0d4758",
+   "execution_count": 67,
+   "id": "a27b54f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'img_url': 'https://marshemispheres.com/images/full.jpg',\n",
+       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg',\n",
+       "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg',\n",
+       "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg',\n",
+       "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 4. Print the list that holds the dictionary of each image url and title.\n",
     "hemisphere_image_urls"
@@ -451,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43949d3f",
+   "id": "69cad408",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65008439",
+   "id": "e7e76ba6",
    "metadata": {},
    "outputs": [],
    "source": []
